Bug 48702 - konqueror/e fails to autoconf (kdenox)
Summary: konqueror/e fails to autoconf (kdenox)
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: konq-e (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror/Embedded Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2002-10-04 23:33 UTC by Christian Lambert
Modified: 2025-11-15 09:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Lambert 2002-10-04 23:33:45 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc 2.95 arm toolchain 
OS:          Linux

I am one of the openzaurus developpers, and I am trying to build konqueror/e
for openzaurus with the latest CVS.  

I fetched the most recent kdenox and used kdelibs CVS from 20010805 as
recommended from the README file.  Running make -f Makefile.cvs from the
kdenox directory produces an error while running autoconf.  I set KDESRC
correctly and it does kind that part, there are a few files which it can't
find so i'm not sure if those will be required later in the compilation.

I'm using autoconf 2.53 and I have a build environment setup for ARM
cross-compilation which I know works correctly.

Here is the full log:

make -C /home/clambert/oz/buildroot/build/konqe -f Makefile.cvs
make[2]: Entering directory `/home/clambert/oz/buildroot/build/konqe'
This Makefile is only for the CVS repository
This will be deleted before making the distribution

*** preparing konq-embed...
make[3]: Entering directory `/home/clambert/oz/buildroot/build/konqe/konq-embed'
*** preparing kde sources (from /home/clambert/oz/buildroot/build/konqe/kdelibs into ./kdesrc) ...
cp: cannot stat `/home/clambert/oz/buildroot/build/konqe/kdelibs/kdecore/kmultipledrag.cpp': No such file or directory
cp: cannot stat `/home/clambert/oz/buildroot/build/konqe/kdelibs/kdecore/kmultipledrag.h': No such file or directory
cp: cannot stat `/home/clambert/oz/buildroot/build/konqe/kdelibs/kio/kssl/ksslsigners.h': No such file or directory
cp: cannot stat `/home/clambert/oz/buildroot/build/konqe/kdelibs/kio/kssl/ksslx509v3.h': No such file or directory
cp: cannot stat `/home/clambert/oz/buildroot/build/konqe/kdelibs/kio/kssl/ksslx509v3.cc': No such file or directory
cp: cannot stat `/home/clambert/oz/buildroot/build/konqe/kdelibs/kio/kssl/ksslpkcs7.h': No such file or directory
make[3]: Leaving directory `/home/clambert/oz/buildroot/build/konqe/konq-embed'
make[3]: Entering directory `/home/clambert/oz/buildroot/build/konqe'
*** Creating acinclude.m4
make[4]: Entering directory `/home/clambert/oz/buildroot/build/konqe'
make[4]: Leaving directory `/home/clambert/oz/buildroot/build/konqe'
*** Creating list of subdirectories
*** Creating configure.in
make[4]: Entering directory `/home/clambert/oz/buildroot/build/konqe'
make[5]: Entering directory `/home/clambert/oz/buildroot/build/konqe'
make[5]: Leaving directory `/home/clambert/oz/buildroot/build/konqe'
make[4]: Leaving directory `/home/clambert/oz/buildroot/build/konqe'
*** Creating aclocal.m4
*** Creating configure
configure.in:551: warning: AC_CANONICAL_TARGET invoked multiple times
configure.in:552: warning: AC_ARG_PROGRAM invoked multiple times
configure.in:564: warning: AC_LIBTOOL_SETUP was called before AC_LIBLTDL_CONVENIENCE
NONE:0: error: m4_init: unbalanced m4_divert_push:
configure.in:7: m4_divert_push: BODY
configure.in:7: m4_divert_push: KILL
NONE:0: the top level
make[3]: *** [cvs] Error 1
make[3]: Leaving directory `/home/clambert/oz/buildroot/build/konqe'
make[2]: *** [all] Error 2
make[2]: Leaving directory `/home/clambert/oz/buildroot/build/konqe'
make[1]: *** [/home/clambert/oz/buildroot/stamps/.konqe.binary] Error 2
make[1]: Leaving directory `/home/clambert/oz/buildroot/packages/konqe'
make: *** [packages/konqe] Error 2
Comment 1 John Firebaugh 2002-10-05 06:41:19 UTC
Please discuss build errors via the mailing lists. 
Comment 2 Christoph Cullmann 2025-11-15 09:38:52 UTC
Git commit 6d23c7f5e4a354e394f12ed8e355609c32ac824c by Christoph Cullmann, on behalf of Méven Car.
Committed on 14/11/2025 at 16:29.
Pushed by meven into branch 'master'.

KconfigIni: stream parse ini files

Detect when a file does not look like a valid ini file when in the first 1.5 MB no
'\n' was found.

And stop processing when a file accumulates more than 100 errors.

Consequently, this removes their interned string cache.

M  +73   -35   src/core/kconfigini.cpp
M  +1    -1    src/core/kconfigini_p.h

https://invent.kde.org/frameworks/kconfig/-/commit/6d23c7f5e4a354e394f12ed8e355609c32ac824c