KconfigIni: stream parse ini files

Detect when a file does not look like a valid ini file when in 256 KiB no
'\n' was detected.

And stop processing when a file accumulates more than 100 errors.

Consequently, this removes there interned string cache.

BUG:48702